added and updated

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,12 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <title>Emergency Nation</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  welcome to emergency nation
+  <p>hello world</p>
 
-  <h3>Documents</h3>
-  <h4>Handbook</h4>
-  <p><a href="documents/handbook/v5.pdf" target="_blank">v5</a></p>
+  <p>welcome to emergency nation</p>
+  <h2>Documents</h2>
+  <h3>Handbook&nbsp;<a href="documents/handbook/v5.pdf" target="_blank">v5</a></h3>
+  <h2>Privacy</h2>
+  <h3>Apps</h3>
+  <p><a href="https://www.bitmessage.org/wiki/Main_Page">Bitmessage</a> is the currently used app for chatting</p>
+  <h3>Email</h3>
+  <p><a href="http://protonmail.com">protonmail</a> is an encrypted email service but any will do. they are generally free. it is recommended that you start with a new email when coming to this community so that you do not attract any unwanted attention.</p>
+  <h3>Internet</h3>
+  <p>1.1.1.1 is a dns to resolve the urls that you type into your browser. it is generally a good idea to have it on your router as well as any device that is mobile / not a desktop computer. <a href="https://www.windowscentral.com/how-configure-cloudflare-dns-1111-service-windows-10-and-router">configure on router and pc</a> or <a href="https://www.intego.com/mac-security-blog/how-to-use-cloudflares-1-1-1-1-public-dns-and-why-you-should/">configure on mac</a>. there are also android and iphone apps to do the same</p>
+  <h3>Browser</h3>
+  <p><a href="https://brave.com/">brave</a> is a good browser and you can tip creators anonymously for the content they put online. it has a privacy mode with tor in it. <a href="https://www.torproject.org/">tor</a> itself is also a good choice. it is strongly advised that you use a privacy oriented browser like brave as they take out a few things that can help other sites track that you have visited this one like referrer strings. for example try clicking on the bitmessage link in both brave and chrome and then open up the dev tools in each one. brave shows an empty string. chrome shows this site's url.</p>
+  <h2>Password Management</h2>
+  <p><a href="https://1password.com/">1password</a> is a solid app for maintaining control over your passwords and generating long, secure strings in an easy interface. 2fa (which we always recommend) is also available to setup in the app. Other managers like <a href="https://lastpass.com/">lastpass</a> are good as well.</p>
+  <h2>Monitoring</h2>
+  <p>it is a good idea to make sure that when a breech occurs you are not succeptable to the fallout. <a href="https://haveibeenpwned.com/">haveibeenpwned</a> is a solid service that monitors the web for claims of credentials posted by hackers after looting a db or service.</p>
+  <h2>Social</h2>
+  <p>chat on <a href="https://riot.im/app/#/room/#EmergencyNation:matrix.org">riot</a>, <a href="https://voat.co/v/emergencynation">voat</a>, or <a href="https://discordapp.com/invite/VGUkvyz">discord</a></p>
+  <footer>
+    <p><a href="land">buy land here</a></p>
+  </footer>
 </body>
 </html>
